#80 Adding uri categories and swift export
