# utils/api_endpoint_definition.py
@@ -6,6 +6,10 @@ class ApiAccessLevelSuper:
     pass
 
 
+class ApiEndpointCategorySuper:
+    pass
+
+
 class ApiAccessType(enum.IntEnum):
     read = 0
     write = 1
@@ -14,13 +18,15 @@ class ApiAccessType(enum.IntEnum):
 class ApiEndpointDefinition:
     _uri: str
     _access_levels: list[ApiAccessLevelSuper]
+    _category: Optional[ApiEndpointCategorySuper]
     _access_type: Optional[ApiAccessType]
     _outgoing: bool
 
-    def __init__(self, uri: str, access_levels: list[ApiAccessLevelSuper], access_type: Optional[ApiAccessType],
-                 outgoing: bool):
+    def __init__(self, uri: str, access_levels: list[ApiAccessLevelSuper], category: Optional[ApiEndpointCategorySuper],
+                 access_type: Optional[ApiAccessType], outgoing: bool):
         self._uri = uri
         self._access_levels = access_levels
+        self._category = category
         self._access_type = access_type
         self._outgoing = outgoing
 
@@ -35,6 +41,10 @@ class ApiEndpointDefinition:
     @property
     def access_type(self) -> Optional[ApiAccessType]:
         return self._access_type
+
+    @property
+    def category(self) -> Optional[ApiEndpointCategorySuper]:
+        return self._category
 
     @property
     def outgoing(self) -> bool:
